--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --kanban-blue: #C4E1F6;
+  --kanban-yellow: #FEEE91;
+  --kanban-orange: #FFBD73;
+  --kanban-deep-orange: #FF9D3D;
 }
 
 @theme inline {
